--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body{
     font-weight: bold;
     font-family:'Quicksand', sans-serif;
     text-align: center;
-    margin: 40px 0px;
+    margin: 30px 0px;
     color: rgba(0,0,0,0.8);
 }
 #turn{
@@ -45,13 +45,13 @@ body{
     height:30px;
     margin:40px 0px;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
     background-color: none;
     color: rgba(0,0,0,0.8);
     z-index: 10;
     font-family:'Quicksand', sans-serif;
-    text-transform: capitalize;
+    text-transform: lowercase;
 }
 #main-box{
     position: absolute;
@@ -230,7 +230,7 @@ body{
     margin-top: 0px;
 }
 .x{
-    border:2px solid rgba(0,0,0,0.8);
+    border:3px solid rgba(0,0,0,0.8);
 }
 .tb{
    border-top:0px; 
@@ -245,10 +245,12 @@ body{
    border-right:0px; 
 }
 #title{
-    font-size: 50px;
+    font-size: 55px;
+    margin: 50px 0 0 0;
 }
 #turn{
-    font-size: 30px;
+    font-size: 40px;
+    margin: 0 0 80px 0;
 }
 .bar div:before {
   background:rgba(255,255,255,0.1);
